applets/kicker/kastatsfavoritesmodel.cpp
@@ -29,6 +29,7 @@
 #include <PlasmaActivities/Stats/Terms>
 #include <algorithm>
 #include <qnamespace.h>
+#include <qurl.h>
 
 #include "config-KDECI_BUILD.h"
 
@@ -688,7 +689,23 @@ void KAStatsFavoritesModel::removeFavoriteFrom(const QString &id, const Activity
         return;
     }
 
+    // both the url from the direct id and the url from the normalized id can fail:
+    // - direct breaks on malformed .desktop file names, in particular ones that
+    //   contain parts misinterpreted as url schemes and where case folding causes
+    //   a mismatch, like "Test: 1.desktop" which is converted to "test: 1.desktop"
+    //   with a QString -> QUrl -> QString round trip
+    // - normalized url breaks on files/folders that were favorited and then deleted,
+    //   see bug: 474120
+    // So we take the normalized id only if the regular id url toString()ed differs
+    // only in case from the regular id and it's not already application scheme nor
+    // a local file url, and take and the regular id otherwise - a bit hacky, but
+    // should handle both cases and hopefully not affect anything else.
+
     QUrl url = QUrl(id);
+    if (url.toString().compare(id, Qt::CaseInsensitive) == 0 && url.toString().compare(id, Qt::CaseSensitive) != 0 && !url.isLocalFile()
+        && url.scheme() != QStringLiteral("applications")) {
+        url = QUrl(d->normalizedId(id).value());
+    }
 
     d->m_watcher.unlinkFromActivity(url, activity, Agent(agentForUrl(id)));
 }
